k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
      - name: product-service
        image: manoj1812/eksnew:latest
        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"
